Fix avatar alignment
git-svn-id: http://activereload.svn.engineyard.com/warehouse/trunk@1771 8456e5f2-bb15-0410-bd20-b44782a1fb1e

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1067,7 +1067,7 @@ li.permission span.log {
   margin-left: 50px;
 }
 
-li .avatar {
+li.permission .avatar {
   float: left;
   margin-right: 10px;
 }
